--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "date-fns": "^4.1.0",
     "embla-carousel-react": "^8.6.0",
     "lucide-react": "^0.541.0",
+    "motion": "^12.23.22",
     "next": "^15.5.0",
     "react": "19.1.0",
     "react-day-picker": "^9.9.0",
